[package]
name = "adb-kit"
version = "0.1.0"
edition = "2021"
authors = ["ego <ego@laterinc.com>"]
description = "Rust 库用于与 Android Debug Bridge (ADB) 交互"
license = "MIT"
repository = "https://github.com/later-design/adb-kit"
documentation = "https://docs.rs/adb-kit"
readme = "README.md"
keywords = ["android", "adb", "debug", "mobile"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
log = "0.4"
thiserror = "2.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
once_cell = "1.21"
rand = "0.9"
glob = "0.3"
chrono = "0.4"

[dev-dependencies]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "file_transfer"
path = "examples/file_transfer.rs"

[[example]]
name = "app_management"
path = "examples/app_management.rs"

[[example]]
name = "screen_capture"
path = "examples/screen_capture.rs"

[[example]]
name = "parallel_operations"
path = "examples/parallel_operations.rs"